# Incidentmind-v1

./: .env.example  .gitignore  Dockerfile  README.md  baseline_scores.json  incident_env.py  inference.py  openenv.yaml  pre_submit_check.py  pyproject.toml  requirements.txt  scenarios.json
scratch/: clean_file.py
server/: app.py  graders.py
